--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   flutter_staggered_grid_view: ^0.7.0
   photo_view: ^0.15.0
   flutter_speed_dial: ^7.0.0
+  firebase_core: ^3.3.0
 
 dev_dependencies:
   flutter_test:
