--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,10 @@ dependencies:
   flutter_speed_dial: ^7.0.0
   firebase_core: ^3.3.0
 
+  cloud_firestore: ^5.2.1 
+
+
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
